--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Espaces Verts & Multiservices</title>
+<title> Tomu Espaces Verts & Multiservices</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
@@ -38,3 +38,4 @@
 </footer>
 </body>
 </html>
+
