--- a/services.html
+++ b/services.html
@@ -21,17 +21,20 @@
     <h2>Espaces Verts</h2>
     <ul>
         <li>Tonte de pelouse</li>
-        <li>Taille de haies et arbustes</li>
-        <li>Désherbage</li>
+        <li>Taille de haies et arbres fruitiers</li>
+        <li>Débrousaillage</li>
         <li>Nettoyage de jardin</li>
+        <li>Cloture</li>
+        <li>Système d'arrosage automatique</li>
+    
     </ul>
 
     <h2>Multiservices</h2>
     <ul>
-        <li>Petit bricolage</li>
-        <li>Nettoyage extérieur / intérieur</li>
-        <li>Aide au déménagement</li>
-        <li>Petits travaux divers</li>
+        <li>Tout traveaux de bricolage</li>
+        <li>Nettoyage extérieur</li>
+        <li>Terrasse en bois (Teck,Pin,Chataignier)</li>
+        <li>Peinture</li>
     </ul>
 </section>
 
@@ -40,3 +43,4 @@
 </footer>
 </body>
 </html>
+
