--- a/tarifs.html
+++ b/tarifs.html
@@ -22,9 +22,8 @@
     <p><strong>✔ Devis gratuit et sans engagement</strong></p>
 
     <ul>
-        <li>Entretien de jardin : à partir de XX €</li>
-        <li>Taille de haies : sur devis</li>
-        <li>Multiservices : à partir de XX € / heure</li>
+        <li>Entretien de jardin : sur devis</li>
+        <li>Multiservices : sur devis</li>
     </ul>
 </section>
 
@@ -33,3 +32,4 @@
 </footer>
 </body>
 </html>
+
