--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 <section class="content">
     <p>📞 Téléphone : 07 88 91 41 77</p>
     <p>📧 Email : t.espacevert@gmail.com</p>
-    <p>📍 Zone d'intervention de Moriani à Vescovato</p>
+    <p>📍 Zone d'intervention de Moriani à Vescovato ainsi que toute la secteur d'Orezza</p>
 </section>
 
 <footer>
@@ -28,4 +28,5 @@
 </footer>
 </body>
 </html>
+
 
