--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
 <header>
-    <h1> Tomu Espaces Verts & Multiservices</h1>
+    <img src="logo.png" alt="Logo Espaces Verts" class="logo">
+    <h1>Espaces Verts & Multiservices</h1>
     <nav>
         <a href="index.html">Accueil</a>
         <a href="services.html">Services</a>
@@ -17,6 +18,7 @@
         <a href="contact.html">Contact</a>
     </nav>
 </header>
+
 
 <section class="hero">
     <h2>Votre partenaire pour vos jardins et petits travaux</h2>
@@ -38,5 +40,6 @@
 </footer>
 </body>
 </html>
+
 
 
